--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <li><a href="#fleet" class="nav-link">צי היאכטות</a></li>
                 <li><a href="#events" class="nav-link">אירועים</a></li>
                 <li><a href="#contact" class="nav-link nav-cta">צרו קשר</a></li>
+                <li class="nav-social">
+                    <a href="https://www.instagram.com/arie.skipper.chef/" target="_blank" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg></a>
+                    <a href="https://www.facebook.com/%D7%90%D7%A8%D7%99%D7%94-%D7%A1%D7%A7%D7%99%D7%A4%D7%A8-%D7%95%D7%A9%D7%A3-Arie-Skipper-Chef-114606693663847/" target="_blank" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
+                </li>
                 <li class="nav-lang">
                     <button class="lang-toggle" aria-label="שפה">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
@@ -40,6 +44,7 @@
                         <a href="fr.html" class="lang-option">Français</a>
                         <a href="ru.html" class="lang-option">Русский</a>
                         <a href="ar.html" class="lang-option">العربية</a>
+                        <a href="es.html" class="lang-option">Español</a>
                     </div>
                 </li>
             </ul>
@@ -261,6 +266,16 @@
                         <span class="fleet-tag">יוקרתית ומרווחת</span>
                     </div>
                 </div>
+                <div class="fleet-card" data-animate>
+                    <div class="fleet-card-img">
+                        <img src="images/maxum-monterey.jpg" alt="סירה מהירה">
+                    </div>
+                    <div class="fleet-card-content">
+                        <h3>סירה מהירה</h3>
+                        <p>אדרנלין על המים - חוויה מלאת מהירות ורגש</p>
+                        <span class="fleet-tag">אדרנלין ומהירות</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -428,6 +443,10 @@
                 <div class="footer-contact">
                     <a href="tel:0585731509">058-573-1509</a>
                     <a href="mailto:arie.skipper.chef@gmail.com">arie.skipper.chef@gmail.com</a>
+                    <div class="footer-social">
+                        <a href="https://www.instagram.com/arie.skipper.chef/" target="_blank" aria-label="Instagram"><svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg></a>
+                        <a href="https://www.facebook.com/%D7%90%D7%A8%D7%99%D7%94-%D7%A1%D7%A7%D7%99%D7%A4%D7%A8-%D7%95%D7%A9%D7%A3-Arie-Skipper-Chef-114606693663847/" target="_blank" aria-label="Facebook"><svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
